# modaodfweb

./: .gitignore  Makefile.am  PROBLEMS  README  autogen.sh  configure.ac  modaodfweb-generate-proof-key  modaodfweb.service  modaodfweb.spec.in  modaodfweb.xml.in  ndcodfweb.service  ndcodfweb.spec.in  ndcodfweb.xml.in  online.spec.in  pkgconfig.pc.in  startwsd.sh
android/lib/: build.gradle.in
browser/admin/: admin.strings.js  admintemplate.html
browser/html/: load.doc.html  loleaflet.html.m4
browser/js/: global.js
browser/po/: help-nn.po  help-sl.po  ui-ab.po  ui-af.po  ui-am.po  ui-an.po  ui-ar.po  ui-ast.po  ui-bar.po  ui-be.po  ui-be_Latn.po  ui-bg.po  ui-bn.po  ui-br.po  ui-bs.po  ui-ca-valencia.po  ui-ca.po  ui-cs.po  ui-cy.po  ui-da.po  ui-de.po  ui-dsb.po  ui-el.po  ui-en_AU.po  ui-en_GB.po  ui-en_NZ.po  ui-en_ZA.po  ui-eo.po  ui-es.po  ui-et.po  ui-eu.po  ui-fa.po  ui-fi.po  ui-fr.po  ui-fy.po  ui-ga.po  ui-gd.po  ui-gl.po  ui-gug.po  ui-he.po  (+43 more)
browser/po/templates/: oxool-ui.pot
browser/src/: docstate.js
browser/src/control/: Control.Menubar.js  Control.Notebookbar.js  Control.PartsPreview.js  Control.Toolbar.js  Control.UIManager.js  Control.Zotero.js  Toolbar.js
browser/src/control/jsdialog/: Widget.DrawingArea.js  Widget.FormulabarEdit.js  Widget.LanguageSelector.js  Widget.MenuButton.js  Widget.MobileTabControl.js  Widget.MultilineEdit.js  Widget.ScrolledWindow.js  Widget.TreeView.js
browser/src/core/: Socket.js
browser/src/layer/marker/: ProgressOverlay.js
browser/src/map/: Clipboard.js  Map.js
browser/src/map/handler/: Map.VersionBar.js  Map.WOPI.js
browser/welcome/: welcome.html
bundled/include/LibreOfficeKit/: Makefile.am
common/: Common.hpp  JailUtil.cpp  Log.cpp  Log.hpp  Session.cpp  Unit.cpp  Unit.hpp  Util.cpp  Util.hpp
cypress_test/: README
cypress_test/integration_tests/common/: helper.js
debian/: changelog  control  copyright  modaodfweb-dev.install  modaodfweb-modules.install  modaodfweb.install  modaodfweb.postinst.in  modaodfweb.postrm  modaodfweb.preinst  modaodfweb.service  ndcodfweb.cron.d  ndcodfweb.postinst.in  ndcodfweb.postrm  ndcodfweb.preinst  oxoolwsd.postinst.in  rules
docker/: README
docker/from-packages/: Dockerfile
docker/from-packages/scripts/: start-collabora-online.sh  start-modaodfweb.sh
docker/from-source/: ArchLinux  Debian  README.md  Ubuntu  openSUSE
etc/sysconfig/: modaodfweb  ndcodfweb
fonts/: Makefile.am
ios/: config.h.in
ios/Mobile.xcodeproj/: project.pbxproj
kit/: ChildSession.cpp  ForKit.cpp  Kit.cpp  SetupKitEnvironment.hpp
kubernetes/helm/collabora-online/: Chart.yaml  README.md
kubernetes/helm/collabora-online/grafana_dashboards/: ha-allocation.json  overview.json
loleaflet/: .eslintignore  Makefile.am  README  loleaflet-api.html  package.json
loleaflet/admin/: admin.html  admin.strings.js  adminBase.html  adminMergeODF.html  adminSettings.html  adminTbl2sc.html  adminTemplateRepo.html  admintemplate.html
loleaflet/admin/css/: datatables.min.css
loleaflet/admin/src/: AdminSocketGlobalFunction.js  AdminSocketMacIp.js  AdminSocketMergeODF.js  AdminSocketTbl2sc.js  AdminSocketTemplateRepo.js
loleaflet/css/: datatables.min.css  device-desktop.css  device-mobile.css  device-tablet.css  loleaflet.css  menubar.css
loleaflet/html/: framed.doc.html  loleaflet.html.m4
loleaflet/js/: global.js  main.js  toolbar.js
loleaflet/po/: ui-ab.po  ui-af.po  ui-am.po  ui-an.po  ui-ar.po  ui-ast.po  ui-bar.po  ui-be.po  ui-bg.po  ui-bn.po  ui-br.po  ui-bs.po  ui-ca-valencia.po  ui-ca.po  ui-cs.po  ui-cy.po  ui-da.po  ui-de.po  ui-dsb.po  ui-el.po  ui-en_AU.po  ui-en_GB.po  ui-en_NZ.po  ui-en_ZA.po  ui-eo.po  ui-es.po  ui-et.po  ui-eu.po  ui-fi.po  ui-fr.po  ui-fy.po  ui-ga.po  ui-gd.po  ui-gl.po  ui-gug.po  ui-he.po  ui-hi.po  ui-hr.po  ui-hsb.po  ui-hu.po  (+38 more)
loleaflet/po/templates/: loleaflet-ui.pot
loleaflet/src/: errormessages.js
loleaflet/src/control/: Control.AlternativeCommand.js  Control.ColumnHeader.js  Control.Menubar.js  Control.MobileTopBar.js  Control.ReadonlyBar.js  Control.RowHeader.js  Control.Tabs.js  Parts.js  Toolbar.Extensions.js  Toolbar.js
loleaflet/src/core/: Socket.js
loleaflet/src/layer/: BackgroundColor.js
loleaflet/src/map/: Map.js
loleaflet/test/: bootstrap.js
loleaflet/uiconfig/dialogs/: Action.js  PdfWatermarkText.js
loleaflet/uiconfig/presentation/: menubar.json
loleaflet/uiconfig/spreadsheet/: menubar.json
loleaflet/uiconfig/text/: menubar.json
loleaflet/welcome/: welcome.html
man/: modaodfweb-generate-proof-key.1  modaodfweb-systemplate-setup.1  modaodfweb.1  modaodfwebconfig.1  modaodfwebconvert.1  modaodfwebforkit.1  modaodfwebmount.1  modaodfwebstress.1  ndcodfweb-systemplate-setup.1  ndcodfweb.1  ndcodfwebconfig.1  ndcodfwebconvert.1  ndcodfwebforkit.1
modules/: Makefile.am  mergeodf.cpp  mergeodf.h  mergeodf.xml  mergeodf.xml.in  mergeodf_access_db.cpp  mergeodf_access_db.h  mergeodf_file_db.cpp  mergeodf_file_db.h  mergeodf_logging_db.cpp  mergeodf_logging_db.h  mergeodf_parser.cpp  mergeodf_parser.h  oxoolmodule.h  tbl2sc.cpp  tbl2sc.h  tbl2sc.xml  tbl2sc.xml.in  tbl2sc_logging_db.cpp  tbl2sc_logging_db.h  templaterepo.cpp  templaterepo.h  templaterepo.xml.in  templaterepo_db.cpp  templaterepo_file_db.cpp
modules/runTimeData/: templaterepo.sqlite
net/: Socket.cpp
scripts/: profile-modaodfweb  run-wsdunit  segv-catch.pl
src/development-tools/module-template/: module.spec.in
src/include/OxOOL/: OxOOL.h
src/modules/: Makefile.am
src/modules/MergeODF/: Makefile.am  MergeODF.xml  data.db
src/modules/Table2SC/: Table2SC.xml
src/modules/TemplateRepo/: TemplateRepo.xml
test/: Makefile.am
tools/: Config.cpp  Connect.cpp  KitClient.cpp  Stress.cpp  Tool.cpp  WebSocketDump.cpp  map.cpp  mount.cpp
wasm/: README.no-container.md
wsd/: Admin.cpp  Admin.hpp  Admin.old.cpp  AdminModel.cpp  AdminModel.hpp  ClientSession.cpp  DocumentBroker.cpp  FileServer.cpp  FileServer.hpp  LOOLWSD.cpp  OXOOLWSD.cpp  ProofKey.cpp  README  RequestDetails.hpp  Storage.hpp  metrics.txt  protocol.txt  reference.md
(+16 files in other folders)
